--- a/InstaStay/Areas/HotelManager/Views/ManageRooms/Edit.cshtml
+++ b/InstaStay/Areas/HotelManager/Views/ManageRooms/Edit.cshtml
@@ -60,10 +60,17 @@
                             <span asp-validation-for="BedType" class="text-danger"></span>
                         </div>
                         <div class="text-center">
-                            <button type="submit" class="btn btn-success w-100">Save Changes</button>
-                            <a href="/HotelManager/ManageHotel/Edit/@Model.HotelId" class="btn btn-secondary mt-2 w-100">Back to List</a>
-                            <a href="/HotelManager/ManageRooms/ShowAllRoomImages/@Model.Id" class="btn btn-warning mt-2 w-100">Manage Images</a>
+                            <button type="submit" class="btn btn-success w-100">
+                                <i class="fas fa-save"></i> Save Changes
+                            </button>
+                            <a href="/HotelManager/ManageHotel/Edit/@Model.HotelId" class="btn btn-secondary mt-2 w-100">
+                                <i class="fas fa-arrow-left"></i> Back to List
+                            </a>
+                            <a href="/HotelManager/ManageRooms/ShowAllRoomImages/@Model.Id" class="btn btn-outline-info mt-2 w-100">
+                                <i class="fas fa-images"></i> Manage Images
+                            </a>
                         </div>
+
                     </form>
                 </div>
             </div>
